@@ -13,29 +13,23 @@ import net.minecraft.util.collection.DefaultedList;
 import net.minecraft.village.TradeOffer;
 import net.minecraft.village.TradedItem;
 
-public class ShopOffer {
+public record ShopOffer(ItemStack sell, long price) {
     public static final Endec<ShopOffer> ENDEC = StructEndecBuilder.of(
         MinecraftEndecs.ITEM_STACK.fieldOf("sell", ShopOffer::getSellStack),
         Endec.LONG.fieldOf("price", ShopOffer::getPrice),
         ShopOffer::new
     );
 
-    private final ItemStack sell;
-    private final long price;
 
-    public ShopOffer(ItemStack sell, long price) {
-
+    public ShopOffer {
         if (sell.isEmpty()) throw new IllegalArgumentException("Sell Stack must not be empty");
         if (price == 0) throw new IllegalArgumentException("Price must not be null");
-
-        this.sell = sell;
-        this.price = price;
     }
 
     @SuppressWarnings("ConstantConditions")
     public TradeOffer toTradeOffer(ShopBlockEntity shop, boolean inexhaustible) {
         boolean isPocketChange = CurrencyConverter.getRequiredCurrencyTypes(price) == 1;
-        var buyStack = isPocketChange ? CurrencyConverter.getAsItemStackList(price).getFirst() : MoneyBagItem.create(price);
+        var buyStack = isPocketChange ? CurrencyConverter.getAsItemStackList(price).get(0) : MoneyBagItem.create(price);
         int maxUses = inexhaustible ? Integer.MAX_VALUE : count(shop.getItems(), sell) / sell.getCount();
         var tradedItem = isPocketChange ? new TradedItem(buyStack.getItem(), (int) price) : new TradedItem(Registries.ITEM.getEntry(buyStack.getItem()), 1, ComponentPredicate.EMPTY, buyStack);
 
